ingress-frigate-interior.yaml
# Source: frigate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-interior
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate-interior
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: "frigate-interior.farh.net"
    external-dns.alpha.kubernetes.io/target: "108.254.166.31"
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - "frigate-interior.farh.net"
      secretName: frigate-interior-tls
  rules:
    - host: "frigate-interior.farh.net"
      http:
        paths:
          - path: /
            pathType: "ImplementationSpecific"
            backend:
              service:
                name: frigate-interior
                port:
                  name: http-auth
